# cly-67

./: README.md  main.py  pyproject.toml  requirements.txt
src/ocr_tool/: batch_processor.py  cli.py  exporter.py  ocr_engine.py  preprocessor.py  statistics.py
